[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "pmind-fal-ai-mcp"
version = "0.1.0"
description = "MCP server for fal.ai - universal AI model execution"
authors = [{ name = "pmind-fal-ai-mcp" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "fal-client>=0.3.0",
    "httpx>=0.25.0",
]

[project.scripts]
pmind-fal-ai-mcp = "src.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]